test/valid/ExtensionTesting/Mother.plume
/**
 * A mother. Tests method overriding of abstract and concrete methods
 *
 * @author Robin Burgess 36815
 */
class Mother extends AbstractMother is

	method override getName : () -> String is
		"Your Mother"
	method override toString : () -> String is
		"ThisisAMother"