test/invalid/ExtendsInvalidPrimitive/ExtendsString.plume
/**
 * A class that extendsString
 *
 * @author Robin Burgess 36815
 */
class ExtendsString extends String is
	method override toString : () -> Integer is
		"Unibrows!"